console: Add LoRaCloud GLS form

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -304,6 +304,13 @@
   "console.containers.lora-cloud-das-form.index.tokenUpdated": "Token updated",
   "console.containers.lora-cloud-das-form.index.tokenDeleted": "Token deleted",
   "console.containers.lora-cloud-das-form.index.setToken": "Set token",
+  "console.containers.lora-cloud-gls-form.index.token": "Token",
+  "console.containers.lora-cloud-gls-form.index.setLoRaCloudToken": "Set LoRa Cloud token",
+  "console.containers.lora-cloud-gls-form.index.deleteToken": "Delete token",
+  "console.containers.lora-cloud-gls-form.index.deleteWarning": "Are you sure you want to delete the current token? This action cannot be undone.",
+  "console.containers.lora-cloud-gls-form.index.tokenUpdated": "Token updated",
+  "console.containers.lora-cloud-gls-form.index.tokenDeleted": "Token deleted",
+  "console.containers.lora-cloud-gls-form.index.setToken": "Set token",
   "console.containers.owners-select.owners-select.title": "Owner",
   "console.containers.owners-select.owners-select.warning": "There was an error and the list of organizations could not be displayed",
   "console.containers.pubsub-formats-select.index.title": "Pub/Sub format",
