--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -304,6 +304,13 @@
   "console.containers.lora-cloud-das-form.index.tokenUpdated": "Xxxxx xxxxxxx",
   "console.containers.lora-cloud-das-form.index.tokenDeleted": "Xxxxx xxxxxxx",
   "console.containers.lora-cloud-das-form.index.setToken": "Xxx xxxxx",
+  "console.containers.lora-cloud-gls-form.index.token": "Xxxxx",
+  "console.containers.lora-cloud-gls-form.index.setLoRaCloudToken": "Xxx XxXx Xxxxx xxxxx",
+  "console.containers.lora-cloud-gls-form.index.deleteToken": "Xxxxxx xxxxx",
+  "console.containers.lora-cloud-gls-form.index.deleteWarning": "Xxx xxx xxxx xxx xxxx xx xxxxxx xxx xxxxxxx xxxxx? Xxxx xxxxxx xxxxxx xx xxxxxx.",
+  "console.containers.lora-cloud-gls-form.index.tokenUpdated": "Xxxxx xxxxxxx",
+  "console.containers.lora-cloud-gls-form.index.tokenDeleted": "Xxxxx xxxxxxx",
+  "console.containers.lora-cloud-gls-form.index.setToken": "Xxx xxxxx",
   "console.containers.owners-select.owners-select.title": "Xxxxx",
   "console.containers.owners-select.owners-select.warning": "Xxxxx xxx xx xxxxx xxx xxx xxxx xx xxxxxxxxxxxxx xxxxx xxx xx xxxxxxxxx",
   "console.containers.pubsub-formats-select.index.title": "Xxx/Xxx xxxxxx",
