dev: Update locales

--- a/pkg/webui/locales/en.json
+++ b/pkg/webui/locales/en.json
@@ -195,7 +195,16 @@
   "console.components.payload-formatters-form.index.formatterParameter": "Formatter parameter",
   "console.components.payload-formatters-form.index.grpcFieldDescription": "The address of the service to connect to",
   "console.components.payload-formatters-form.index.appFormatter": "Use application payload formatter",
-  "console.components.payload-formatters-form.index.appFormatterWarning": "This option sets both uplink and downlink formatters to application link defaults",
+  "console.components.payload-formatters-form.index.appFormatterWarning": "This option will affect both uplink and downlink formatter",
+  "console.components.payload-formatters-form.index.setupSubTitle": "Setup",
+  "console.components.payload-formatters-form.test-form.index.jsonError": "{field} must be a valid JSON object",
+  "console.components.payload-formatters-form.test-form.index.validResult": "Payload is valid",
+  "console.components.payload-formatters-form.test-form.index.noResult": "No test result generated yet",
+  "console.components.payload-formatters-form.test-form.index.testDecoder": "Test decoder",
+  "console.components.payload-formatters-form.test-form.index.testEncoder": "Test encoder",
+  "console.components.payload-formatters-form.test-form.index.testSubTitle": "Test",
+  "console.components.payload-formatters-form.test-form.index.bytePayload": "Byte payload",
+  "console.components.payload-formatters-form.test-form.index.jsonPayload": "JSON payload",
   "console.components.pubsub-form.messages.idPlaceholder": "my-new-pubsub",
   "console.components.pubsub-form.messages.messageInfo": "For each enabled message type, an optional sub-topic can be defined",
   "console.components.pubsub-form.messages.deletePubsub": "Delete Pub/Sub",
@@ -269,8 +278,10 @@
   "console.components.webhook-template-info.index.templateInformation": "Template information",
   "console.containers.api-keys-table.index.keyId": "Key ID",
   "console.containers.api-keys-table.index.grantedRights": "Granted Rights",
-  "console.containers.application-payload-formatters.downlink.infoText": "These payload formatters are executed on downlink messages to all end devices in this application. Note: end device level payload formatters have precedence.",
-  "console.containers.application-payload-formatters.uplink.infoText": "These payload formatters are executed on uplink messages from all end devices in this application. Note: end device level payload formatters have precedence.",
+  "console.containers.application-payload-formatters.downlink.title": "Default downlink payload formatter",
+  "console.containers.application-payload-formatters.downlink.infoText": "You can use the \"Payload formatter\" tab of individual end devices to test downlink payload formatters and to define individual payload formatter settings per end device.",
+  "console.containers.application-payload-formatters.uplink.title": "Default uplink payload formatter",
+  "console.containers.application-payload-formatters.uplink.infoText": "You can use the \"Payload formatter\" tab of individual end devices to test uplink payload formatters and to define individual payload formatter settings per end device.",
   "console.containers.applications-table.index.ownedTabTitle": "Owned applications",
   "console.containers.collaborators-table.index.id": "User / Organization ID",
   "console.containers.dev-addr-input.dev-addr-input.generate": "Generate end device address",
@@ -283,6 +294,7 @@
   "console.containers.device-importer.index.operationHalted": "Operation halted",
   "console.containers.device-importer.index.operationFinished": "Operation finished",
   "console.containers.device-importer.index.errorTitle": "There was an error and the operation could not be completed",
+  "console.containers.device-payload-formatters.messages.defaultFormatter": "Click <Link>here</Link> to modify the default payload formatter for this application",
   "console.containers.device-template-format-select.index.title": "Format",
   "console.containers.device-template-format-select.index.warning": "End device template formats unavailable",
   "console.containers.device-title-section.device-title-section.lastSeenUnavailable": "Last seen info unavailable",
@@ -470,8 +482,6 @@
   "console.views.device-overview.index.latestData": "Latest data",
   "console.views.device-overview.index.rootKeys": "Root keys",
   "console.views.device-overview.index.keysNotExposed": "Keys are not exposed",
-  "console.views.device-payload-formatters.index.infoUplinkText": "These payload formatters are executed on uplink messages from this end device and take precedence over application level payload formatters.",
-  "console.views.device-payload-formatters.index.infoDownlinkText": "These payload formatters are executed on downlink messages to this end device and take precedence over application level payload formatters.",
   "console.views.gateway-add.index.createGateway": "Create gateway",
   "console.views.gateway-data.index.gtwData": "Gateway data",
   "console.views.gateway-general-settings.messages.basicTitle": "Basic settings",
