--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -195,7 +195,16 @@
   "console.components.payload-formatters-form.index.formatterParameter": "Xxxxxxxxx xxxxxxxxx",
   "console.components.payload-formatters-form.index.grpcFieldDescription": "Xxx xxxxxxx xx xxx xxxxxxx xx xxxxxxx xx",
   "console.components.payload-formatters-form.index.appFormatter": "Xxx xxxxxxxxxxx xxxxxxx xxxxxxxxx",
-  "console.components.payload-formatters-form.index.appFormatterWarning": "Xxxx xxxxxx xxxx xxxx xxxxxx xxx xxxxxxxx xxxxxxxxxx xx xxxxxxxxxxx xxxx xxxxxxxx",
+  "console.components.payload-formatters-form.index.appFormatterWarning": "Xxxx xxxxxx xxxx xxxxxx xxxx xxxxxx xxx xxxxxxxx xxxxxxxxx",
+  "console.components.payload-formatters-form.index.setupSubTitle": "Xxxxx",
+  "console.components.payload-formatters-form.test-form.index.jsonError": "{field} xxxx xx x xxxxx XXXX xxxxxx",
+  "console.components.payload-formatters-form.test-form.index.validResult": "Xxxxxxx xx xxxxx",
+  "console.components.payload-formatters-form.test-form.index.noResult": "Xx xxxx xxxxxx xxxxxxxxx xxx",
+  "console.components.payload-formatters-form.test-form.index.testDecoder": "Xxxx xxxxxxx",
+  "console.components.payload-formatters-form.test-form.index.testEncoder": "Xxxx xxxxxxx",
+  "console.components.payload-formatters-form.test-form.index.testSubTitle": "Xxxx",
+  "console.components.payload-formatters-form.test-form.index.bytePayload": "Xxxx xxxxxxx",
+  "console.components.payload-formatters-form.test-form.index.jsonPayload": "XXXX xxxxxxx",
   "console.components.pubsub-form.messages.idPlaceholder": "xx-xxx-xxxxxx",
   "console.components.pubsub-form.messages.messageInfo": "Xxx xxxx xxxxxxx xxxxxxx xxxx, xx xxxxxxxx xxx-xxxxx xxx xx xxxxxxx",
   "console.components.pubsub-form.messages.deletePubsub": "Xxxxxx Xxx/Xxx",
@@ -269,8 +278,10 @@
   "console.components.webhook-template-info.index.templateInformation": "Xxxxxxxx xxxxxxxxxxx",
   "console.containers.api-keys-table.index.keyId": "Xxx XX",
   "console.containers.api-keys-table.index.grantedRights": "Xxxxxxx Xxxxxx",
-  "console.containers.application-payload-formatters.downlink.infoText": "Xxxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxx xx xxxxxxxx xxxxxxxx xx xxx xxx xxxxxxx xx xxxx xxxxxxxxxxx. Xxxx: xxx xxxxxx xxxxx xxxxxxx xxxxxxxxxx xxxx xxxxxxxxxx.",
-  "console.containers.application-payload-formatters.uplink.infoText": "Xxxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxx xx xxxxxx xxxxxxxx xxxx xxx xxx xxxxxxx xx xxxx xxxxxxxxxxx. Xxxx: xxx xxxxxx xxxxx xxxxxxx xxxxxxxxxx xxxx xxxxxxxxxx.",
+  "console.containers.application-payload-formatters.downlink.title": "Xxxxxxx xxxxxxxx xxxxxxx xxxxxxxxx",
+  "console.containers.application-payload-formatters.downlink.infoText": "Xxx xxx xxx xxx \"Xxxxxxx xxxxxxxxx\" xxx xx xxxxxxxxxx xxx xxxxxxx xx xxxx xxxxxxxx xxxxxxx xxxxxxxxxx xxx xx xxxxxx xxxxxxxxxx xxxxxxx xxxxxxxxx xxxxxxxx xxx xxx xxxxxx.",
+  "console.containers.application-payload-formatters.uplink.title": "Xxxxxxx xxxxxx xxxxxxx xxxxxxxxx",
+  "console.containers.application-payload-formatters.uplink.infoText": "Xxx xxx xxx xxx \"Xxxxxxx xxxxxxxxx\" xxx xx xxxxxxxxxx xxx xxxxxxx xx xxxx xxxxxx xxxxxxx xxxxxxxxxx xxx xx xxxxxx xxxxxxxxxx xxxxxxx xxxxxxxxx xxxxxxxx xxx xxx xxxxxx.",
   "console.containers.applications-table.index.ownedTabTitle": "Xxxxx xxxxxxxxxxxx",
   "console.containers.collaborators-table.index.id": "Xxxx / Xxxxxxxxxxxx XX",
   "console.containers.dev-addr-input.dev-addr-input.generate": "Xxxxxxxx xxx xxxxxx xxxxxxx",
@@ -283,6 +294,7 @@
   "console.containers.device-importer.index.operationHalted": "Xxxxxxxxx xxxxxx",
   "console.containers.device-importer.index.operationFinished": "Xxxxxxxxx xxxxxxxx",
   "console.containers.device-importer.index.errorTitle": "Xxxxx xxx xx xxxxx xxx xxx xxxxxxxxx xxxxx xxx xx xxxxxxxxx",
+  "console.containers.device-payload-formatters.messages.defaultFormatter": "Xxxxx xXxxxxxxxxx/Xxxxx xx xxxxxx xxx xxxxxxx xxxxxxx xxxxxxxxx xxx xxxx xxxxxxxxxxx",
   "console.containers.device-template-format-select.index.title": "Xxxxxx",
   "console.containers.device-template-format-select.index.warning": "Xxx xxxxxx xxxxxxxx xxxxxxx xxxxxxxxxxx",
   "console.containers.device-title-section.device-title-section.lastSeenUnavailable": "Xxxx xxxx xxxx xxxxxxxxxxx",
@@ -470,8 +482,6 @@
   "console.views.device-overview.index.latestData": "Xxxxxx xxxx",
   "console.views.device-overview.index.rootKeys": "Xxxx xxxx",
   "console.views.device-overview.index.keysNotExposed": "Xxxx xxx xxx xxxxxxx",
-  "console.views.device-payload-formatters.index.infoUplinkText": "Xxxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxx xx xxxxxx xxxxxxxx xxxx xxxx xxx xxxxxx xxx xxxx xxxxxxxxxx xxxx xxxxxxxxxxx xxxxx xxxxxxx xxxxxxxxxx.",
-  "console.views.device-payload-formatters.index.infoDownlinkText": "Xxxxx xxxxxxx xxxxxxxxxx xxx xxxxxxxx xx xxxxxxxx xxxxxxxx xx xxxx xxx xxxxxx xxx xxxx xxxxxxxxxx xxxx xxxxxxxxxxx xxxxx xxxxxxx xxxxxxxxxx.",
   "console.views.gateway-add.index.createGateway": "Xxxxxx xxxxxxx",
   "console.views.gateway-data.index.gtwData": "Xxxxxxx xxxx",
   "console.views.gateway-general-settings.messages.basicTitle": "Xxxxx xxxxxxxx",
