--- a/pkg/webui/locales/xx.json
+++ b/pkg/webui/locales/xx.json
@@ -56,6 +56,8 @@
   "account.views.profile-settings.index.generalSettingsDescription": "Xxxxxx xxxxx xxxx xxxx xx xxxx xxxx, xxxxxxx xxxxxxx xx xxxxx xxxxxxx.",
   "account.views.profile-settings.index.changePasswordTitle": "Xxxxxx xxxxxxxx",
   "account.views.profile-settings.index.changePasswordDescription": "Xxx xx x xxx xxxxxxxx xxx xxxx xxxxxxx.",
+  "account.views.token-login.index.loginToken": "Xxxxx Xxxxx",
+  "account.views.token-login.index.loginFailed": "Xxxxx xxxxxx",
   "account.views.update-password.index.sessionRevoked": "Xxxx xxxxxxxx xxx xxxxxxx xxx xxx xxxxxx xxxxxxxx xxxx xxxxxxx",
   "account.views.validate.index.backToAccount": "Xxxx xx Xxxxxxx",
   "account.views.validate.index.contactInfoValidation": "Xxxxxxx xxxx xxxxxxxxxx",
